[gd_scene load_steps=6 format=3 uid="uid://c36jmwqv2q5lo"]

[ext_resource type="Script" uid="uid://b5r7732tcdcqs" path="res://UserInterface/SettingsMenu/Scripts/settings_menu.gd" id="1_kwsbw"]
[ext_resource type="Theme" uid="uid://b3kq74llqlv3x" path="res://Assets/UIThemes/MinimalistUi/MinimalUI.tres" id="1_vp43c"]
[ext_resource type="PackedScene" uid="uid://dj5vwdm2t0dqf" path="res://UserInterface/Components/split_settings_component.tscn" id="2_kwsbw"]
[ext_resource type="PackedScene" uid="uid://u06gistahwqp" path="res://UserInterface/Components/Audio/audio_slider_component.tscn" id="2_rds1w"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_kwsbw"]
bg_color = Color(0.0214346, 0.0214346, 0.0214346, 1)

[node name="SettingsMenu" type="CanvasLayer" node_paths=PackedStringArray("focus", "fullscreen_checkbox", "current_screen_option", "mute_checkbox")]
script = ExtResource("1_kwsbw")
focus = NodePath("SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Fullscreen/FullsceenSplit/FullscreenCheckBox")
fullscreen_checkbox = NodePath("SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Fullscreen/FullsceenSplit/FullscreenCheckBox")
current_screen_option = NodePath("SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/CurrentScreen/CurrenScreenSplit/CurrentScreenOptions")
mute_checkbox = NodePath("SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Mute/MuteSplit/MuteCheckBox")

[node name="SettingsPanel" type="PanelContainer" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="ContentBox" type="VBoxContainer" parent="SettingsPanel"]
layout_mode = 2

[node name="SettingsContainer" type="MarginContainer" parent="SettingsPanel/ContentBox"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3
theme_override_constants/margin_left = 30
theme_override_constants/margin_top = 30
theme_override_constants/margin_right = 30

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/ContentBox/SettingsContainer"]
layout_mode = 2

[node name="TitleContainer" type="PanelContainer" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer"]
layout_mode = 2
size_flags_vertical = 0
theme_override_styles/panel = SubResource("StyleBoxFlat_kwsbw")

[node name="Title" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/TitleContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 46
text = "Settings"
horizontal_alignment = 1

[node name="PanelContainer2" type="PanelContainer" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="MarginContainer" type="MarginContainer" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2"]
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="ScrollContainer" type="ScrollContainer" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer"]
layout_mode = 2
size_flags_vertical = 3
follow_focus = true

[node name="VBoxContainer" type="VBoxContainer" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer"]
layout_mode = 2
size_flags_horizontal = 3
theme_override_constants/separation = 3

[node name="VideoTitle" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Video"

[node name="Fullscreen" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="FullsceenSplit" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Fullscreen" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="FullscreenCheckBox" type="CheckBox" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Fullscreen/FullsceenSplit"]
layout_mode = 2
size_flags_horizontal = 0
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../../../../../../../OtherButtons/HBoxContainer/Back")
focus_neighbor_bottom = NodePath("../../../CurrentScreen/CurrenScreenSplit/CurrentScreenOptions")
focus_next = NodePath("../../../CurrentScreen/CurrenScreenSplit/CurrentScreenOptions")
focus_previous = NodePath("../../../../../../../../../OtherButtons/HBoxContainer/Back")
theme = ExtResource("1_vp43c")
theme_override_font_sizes/font_size = 30
flat = true

[node name="FiullscreenLabel" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Fullscreen/FullsceenSplit"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Fullscreen"

[node name="Control" type="Control" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Fullscreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CurrentScreen" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_kwsbw")]
layout_mode = 2
split_offset = -150

[node name="CurrenScreenSplit" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/CurrentScreen" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="CurrentScreenLabel" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/CurrentScreen/CurrenScreenSplit"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Current Screen"

[node name="CurrentScreenOptions" type="OptionButton" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/CurrentScreen/CurrenScreenSplit"]
layout_mode = 2
size_flags_horizontal = 0
focus_neighbor_top = NodePath("../../../Fullscreen/FullsceenSplit/FullscreenCheckBox")
focus_neighbor_bottom = NodePath("../../../Mute/MuteSplit/MuteCheckBox")
focus_next = NodePath("../../../Mute/MuteSplit/MuteCheckBox")
focus_previous = NodePath("../../../Fullscreen/FullsceenSplit/FullscreenCheckBox")
theme = ExtResource("1_vp43c")
alignment = 1
icon_alignment = 1

[node name="Control" type="Control" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/CurrentScreen"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AudioTitle" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 45
text = "Audio"

[node name="Mute" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="MuteSplit" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Mute" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="MuteCheckBox" type="CheckBox" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Mute/MuteSplit"]
layout_mode = 2
size_flags_vertical = 4
focus_neighbor_top = NodePath("../../../CurrentScreen/CurrenScreenSplit/CurrentScreenOptions")
focus_neighbor_bottom = NodePath("../../../MasterVol/MasterVolSlider")
focus_next = NodePath("../../../MasterVol/MasterVolSlider")
focus_previous = NodePath("../../../CurrentScreen/CurrenScreenSplit/CurrentScreenOptions")
theme = ExtResource("1_vp43c")
theme_override_font_sizes/font_size = 30
flat = true

[node name="MuteLabel" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Mute/MuteSplit"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Mute"

[node name="Control" type="Control" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Mute"]
layout_mode = 2

[node name="MasterVolLabel" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Master"

[node name="MasterVol" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="MasterVolSlider" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/MasterVol" instance=ExtResource("2_rds1w")]
layout_mode = 2
focus_neighbor_top = NodePath("../../Mute/MuteSplit/MuteCheckBox")
focus_neighbor_bottom = NodePath("../../MusicVol/MusicVolSlider")
focus_next = NodePath("../../MusicVol/MusicVolSlider")
focus_previous = NodePath("../../Mute/MuteSplit/MuteCheckBox")
theme = ExtResource("1_vp43c")
bus_name = "Master"

[node name="Control" type="Control" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/MasterVol"]
layout_mode = 2
theme = ExtResource("1_vp43c")

[node name="MusicVolLabel" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Music"

[node name="MusicVol" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="MusicVolSlider" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/MusicVol" instance=ExtResource("2_rds1w")]
layout_mode = 2
focus_neighbor_top = NodePath("../../MasterVol/MasterVolSlider")
focus_neighbor_bottom = NodePath("../../SfxVol/SfxVolSlider")
focus_next = NodePath("../../SfxVol/SfxVolSlider")
focus_previous = NodePath("../../MasterVol/MasterVolSlider")
theme = ExtResource("1_vp43c")
bus_name = "Music"

[node name="Control" type="Control" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/MusicVol"]
layout_mode = 2
theme = ExtResource("1_vp43c")

[node name="SfxVolLabel" type="Label" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer"]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "Sound Effects"

[node name="SfxVol" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer" instance=ExtResource("2_kwsbw")]
layout_mode = 2

[node name="SfxVolSlider" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/SfxVol" instance=ExtResource("2_rds1w")]
layout_mode = 2
focus_neighbor_top = NodePath("../../MusicVol/MusicVolSlider")
focus_neighbor_bottom = NodePath("../../../../../../../../OtherButtons/HBoxContainer/Back")
focus_next = NodePath("../../../../../../../../OtherButtons/HBoxContainer/Back")
focus_previous = NodePath("../../MusicVol/MusicVolSlider")
theme = ExtResource("1_vp43c")
bus_name = "Sound Effects"

[node name="Control" type="Control" parent="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/SfxVol"]
layout_mode = 2
theme = ExtResource("1_vp43c")

[node name="OtherButtons" type="MarginContainer" parent="SettingsPanel/ContentBox"]
layout_mode = 2
theme_override_constants/margin_left = 30
theme_override_constants/margin_right = 30
theme_override_constants/margin_bottom = 30

[node name="HBoxContainer" type="HBoxContainer" parent="SettingsPanel/ContentBox/OtherButtons"]
layout_mode = 2
theme_override_constants/separation = 15

[node name="Back" type="Button" parent="SettingsPanel/ContentBox/OtherButtons/HBoxContainer"]
layout_mode = 2
focus_neighbor_top = NodePath("../../../SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/SfxVol/SfxVolSlider")
focus_neighbor_right = NodePath("../ResetToDefault")
focus_next = NodePath("../ResetToDefault")
focus_previous = NodePath("../../../SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/SfxVol/SfxVolSlider")
theme_override_font_sizes/font_size = 30
text = " Back "

[node name="Control" type="Control" parent="SettingsPanel/ContentBox/OtherButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="ResetToDefault" type="Button" parent="SettingsPanel/ContentBox/OtherButtons/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 8
theme_override_font_sizes/font_size = 30
text = " Reset to Default "

[connection signal="toggled" from="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Fullscreen/FullsceenSplit/FullscreenCheckBox" to="." method="_on_fullscreen_check_box_toggled"]
[connection signal="item_selected" from="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/CurrentScreen/CurrenScreenSplit/CurrentScreenOptions" to="." method="_on_current_screen_options_item_selected"]
[connection signal="toggled" from="SettingsPanel/ContentBox/SettingsContainer/VBoxContainer/PanelContainer2/MarginContainer/ScrollContainer/VBoxContainer/Mute/MuteSplit/MuteCheckBox" to="." method="_on_mute_check_box_toggled"]
[connection signal="pressed" from="SettingsPanel/ContentBox/OtherButtons/HBoxContainer/Back" to="." method="_on_back_pressed"]
[connection signal="pressed" from="SettingsPanel/ContentBox/OtherButtons/HBoxContainer/ResetToDefault" to="." method="_on_reset_to_default_pressed"]
